// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a regular file 1`] = `
<div
  className="source-viewer-header display-flex-center"
>
  <div
    className="flex-1 little-spacer-top"
  >
    <div
      className="component-name"
    >
      <div
        className="component-name-parent"
      >
        <a
          className="link-no-underline"
          href="/dashboard?id=project"
        >
          <QualifierIcon
            qualifier="TRK"
          />
           
          <span>
            MyProject
          </span>
        </a>
      </div>
      <div
        className="component-name-path"
      >
        <QualifierIcon
          qualifier="FIL"
        />
         
        <span>
          foo/
        </span>
        <span
          className="component-name-file"
        >
          bar.ts
        </span>
        <span
          className="nudged-up spacer-left"
        >
          <ClipboardIconButton
            aria-label="component_viewer.copy_path_to_clipboard"
            className="button-link link-no-underline"
            copyValue="foo/bar.ts"
          />
        </span>
      </div>
    </div>
  </div>
  <Dropdown
    className="source-viewer-header-actions flex-0"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            className="js-measures"
            href="#"
            onClick={[Function]}
          >
            component_viewer.show_details
          </a>
        </li>
        <li>
          <ForwardRef(Link)
            className="js-new-window"
            rel="noopener noreferrer"
            target="_blank"
            to={
              {
                "pathname": "/code",
                "search": "?id=project&selected=project%3Afoo%2Fbar.ts",
              }
            }
          >
            component_viewer.new_window
          </ForwardRef(Link)>
        </li>
        <li>
          <a
            className="js-workspace"
            href="#"
            onClick={[Function]}
          >
            component_viewer.open_in_workspace
          </a>
        </li>
        <li>
          <a
            className="js-raw-source"
            href="/api/sources/raw?key=project%3Afoo%2Fbar.ts"
            rel="noopener noreferrer"
            target="_blank"
          >
            component_viewer.show_raw_source
          </a>
        </li>
      </ul>
    }
    overlayPlacement="bottom-right"
  >
    <ButtonIcon
      aria-label="component_viewer.action_menu"
      className="js-actions"
    >
      <ListIcon />
    </ButtonIcon>
  </Dropdown>
</div>
`;

exports[`should render correctly for a unit test 1`] = `
<div
  className="source-viewer-header display-flex-center"
>
  <div
    className="flex-1 little-spacer-top"
  >
    <div
      className="component-name"
    >
      <div
        className="component-name-parent"
      >
        <a
          className="link-no-underline"
          href="/dashboard?id=my-project"
        >
          <QualifierIcon
            qualifier="TRK"
          />
           
          <span>
            MyProject
          </span>
        </a>
      </div>
      <div
        className="component-name-path"
      >
        <QualifierIcon
          qualifier="UTS"
        />
         
        <span>
          foo/
        </span>
        <span
          className="component-name-file"
        >
          bar.ts
        </span>
        <span
          className="nudged-up spacer-left"
        >
          <ClipboardIconButton
            aria-label="component_viewer.copy_path_to_clipboard"
            className="button-link link-no-underline"
            copyValue="foo/bar.ts"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="display-flex-center"
  >
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        metric.tests.name
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        12
      </span>
    </div>
  </div>
  <Dropdown
    className="source-viewer-header-actions flex-0"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            className="js-measures"
            href="#"
            onClick={[Function]}
          >
            component_viewer.show_details
          </a>
        </li>
        <li>
          <ForwardRef(Link)
            className="js-new-window"
            rel="noopener noreferrer"
            target="_blank"
            to={
              {
                "pathname": "/code",
                "search": "?id=my-project&selected=my-project%3Afoo%2Fbar.ts",
              }
            }
          >
            component_viewer.new_window
          </ForwardRef(Link)>
        </li>
        <li>
          <a
            className="js-workspace"
            href="#"
            onClick={[Function]}
          >
            component_viewer.open_in_workspace
          </a>
        </li>
        <li>
          <a
            className="js-raw-source"
            href="/api/sources/raw?key=my-project%3Afoo%2Fbar.ts"
            rel="noopener noreferrer"
            target="_blank"
          >
            component_viewer.show_raw_source
          </a>
        </li>
      </ul>
    }
    overlayPlacement="bottom-right"
  >
    <ButtonIcon
      aria-label="component_viewer.action_menu"
      className="js-actions"
    >
      <ListIcon />
    </ButtonIcon>
  </Dropdown>
</div>
`;

exports[`should render correctly if issue details are passed 1`] = `
<div
  className="source-viewer-header display-flex-center"
>
  <div
    className="flex-1 little-spacer-top"
  >
    <div
      className="component-name"
    >
      <div
        className="component-name-parent"
      >
        <a
          className="link-no-underline"
          href="/dashboard?id=project"
        >
          <QualifierIcon
            qualifier="TRK"
          />
           
          <span>
            MyProject
          </span>
        </a>
      </div>
      <div
        className="component-name-path"
      >
        <QualifierIcon
          qualifier="FIL"
        />
         
        <span>
          foo/
        </span>
        <span
          className="component-name-file"
        >
          bar.ts
        </span>
        <span
          className="nudged-up spacer-left"
        >
          <ClipboardIconButton
            aria-label="component_viewer.copy_path_to_clipboard"
            className="button-link link-no-underline"
            copyValue="foo/bar.ts"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="display-flex-center"
  >
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        metric.lines.name
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        56
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        metric.coverage.name
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        85.2%
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        duplications
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        1.0%
      </span>
    </div>
    <div
      className="source-viewer-header-measure-separator"
    />
    <div
      className="source-viewer-header-measure"
      key="BUG"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.BUG
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <ForwardRef(Link)
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?files=foo%2Fbar.ts&resolved=false&types=BUG&id=project",
            }
          }
        >
          0
        </ForwardRef(Link)>
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
      key="VULNERABILITY"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.VULNERABILITY
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <ForwardRef(Link)
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?files=foo%2Fbar.ts&resolved=false&types=VULNERABILITY&id=project",
            }
          }
        >
          2
        </ForwardRef(Link)>
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
      key="CODE_SMELL"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.CODE_SMELL
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <ForwardRef(Link)
          to={
            {
              "hash": "",
              "pathname": "/project/issues",
              "search": "?files=foo%2Fbar.ts&resolved=false&types=CODE_SMELL&id=project",
            }
          }
        >
          1
        </ForwardRef(Link)>
      </span>
    </div>
    <div
      className="source-viewer-header-measure"
      key="SECURITY_HOTSPOT"
    >
      <span
        className="source-viewer-header-measure-label"
      >
        issue.type.SECURITY_HOTSPOT
      </span>
      <span
        className="source-viewer-header-measure-value"
      >
        <ForwardRef(Link)
          to={
            {
              "hash": "",
              "pathname": "/security_hotspots",
              "search": "?id=project&files=foo%2Fbar.ts",
            }
          }
        >
          2
        </ForwardRef(Link)>
      </span>
    </div>
  </div>
  <Dropdown
    className="source-viewer-header-actions flex-0"
    overlay={
      <ul
        className="menu"
      >
        <li>
          <a
            className="js-measures"
            href="#"
            onClick={[Function]}
          >
            component_viewer.show_details
          </a>
        </li>
        <li>
          <ForwardRef(Link)
            className="js-new-window"
            rel="noopener noreferrer"
            target="_blank"
            to={
              {
                "pathname": "/code",
                "search": "?id=project&selected=project%3Afoo%2Fbar.ts",
              }
            }
          >
            component_viewer.new_window
          </ForwardRef(Link)>
        </li>
        <li>
          <a
            className="js-workspace"
            href="#"
            onClick={[Function]}
          >
            component_viewer.open_in_workspace
          </a>
        </li>
        <li>
          <a
            className="js-raw-source"
            href="/api/sources/raw?key=project%3Afoo%2Fbar.ts"
            rel="noopener noreferrer"
            target="_blank"
          >
            component_viewer.show_raw_source
          </a>
        </li>
      </ul>
    }
    overlayPlacement="bottom-right"
  >
    <ButtonIcon
      aria-label="component_viewer.action_menu"
      className="js-actions"
    >
      <ListIcon />
    </ButtonIcon>
  </Dropdown>
</div>
`;
